# semyec

./: .gitignore  CMakeLists.txt  README.md  a.out  argc.c  bit1.c  cdefined.c  cerror.c  char1.c  cunchu.c  datatype.c  enum1.c  file1.c  inout.c  main  main.c  makefile  malloc1.c  pointer.c  semye.c  semye.h  sort.c  stdlibdemo.c  stringdemo.c  struct1.c  timedemo.c  yunsuanfu.c
main.dSYM/Contents/Resources/DWARF/: main
